[add] add background to shop
